Generating schemas for get supported locales
