# src/translations/route-handlers.go
@@ -46,6 +46,26 @@ func makeTranslationHandler(context *gin.Context) {
 	context.JSON(http.StatusOK, gin.H{"translated_text": resp})
 }
 
+//	@Summary	Gets supported locales.
+//	@Schemes
+//	@Description	Gets all the supported locales that can be used to translate.
+//	@Tags			translations
+//	@Accept			json
+//	@Produce		json
+//	@Param			target		query		string	false	"The target language to translate the locales to."	example(it)	default(en)
+//
+//	@Param			App-Version	header		string	true	"The version of the app."							example(4.2.0)
+//	@Param			App-Name	header		string	true	"The name of the app."								example(sup-app)
+//	@Param			Api-Key		header		string	true	"API key registered to the app."					example(1234lmao)
+//
+//	@Success		200			{object}	[]supportedLocaleResponse
+//
+//	@Failure		400			{object}	utils.errorMessage
+//	@Failure		403			{object}	utils.errorMessage
+//	@Failure		422			{object}	utils.errorMessage
+//	@Failure		500			{object}	utils.errorMessage
+//
+//	@Router			/translations/supported-locales [get]
 func getSupportedLocalesHandler(context *gin.Context) {
 	var query getSupportedLocalesQuery
 	err := context.ShouldBindQuery(&query)
@@ -62,7 +82,7 @@ func getSupportedLocalesHandler(context *gin.Context) {
 		return
 	}
 
-	var resp []supportedLocale
+	var resp []supportedLocaleResponse
 	var httpErr *utils.Error
 	err = withTranslationService(func(ts translationService) {
 		resp, httpErr = ts.SupportedLanguages(query.Target)
